Beginner-Project03-GitOps-Example/apps/dev/dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-app
  namespace: dev
spec:
  selector:
    app: dev-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
