Beginner-Project03-GitOps-Example/apps/dev/dev-networkpolicy-allow-web.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-from-ingress
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: dev-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx # adjust to your ingress controller namespace
